Bug 160553 - FILEOPEN RTF Section break between tables is not imported
Summary: FILEOPEN RTF Section break between tables is not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2024-04-05 20:20 UTC by Gabor Kelemen (Collabora)
Modified: 2024-12-10 11:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (246 bytes, application/msword)
2024-04-05 20:20 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word 2016 and Writer (60.92 KB, image/png)
2024-04-05 20:21 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-04-05 20:20:53 UTC
Created attachment 193520 [details]
Example file

Attached example file contains two tables with a section break. This is not imported in Writer, so the document is 1 pages instead of two in Word.

1. Open attached document
-> 1 page instead of 2

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9d4f99b2bb54ac7735b3e0d0cadbafbd0279518
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

started in 3.5, but it was good in 3.3
Comment 1 Gabor Kelemen (Collabora) 2024-04-05 20:21:25 UTC
Created attachment 193521 [details]
The example file in Word 2016 and Writer
Comment 2 Dieter 2024-04-21 10:27:02 UTC
I confirm it with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7c2ed9919d6d9d286d9062b91577d6bb2b7de8aa
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 3 Gabor Kelemen (Collabora) 2024-07-22 17:20:35 UTC
Proposed patch is in https://gerrit.libreoffice.org/c/core/+/168607
Comment 4 Commit Notification 2024-10-25 13:26:58 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6803b18d85e8cbd2e76ff0d46e7f4ff2e312916

tdf#160553: writerfilter: RTF import: fix problem with first table in section

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2024-11-04 14:24:23 UTC
Can this be closed as fixed?
Comment 6 Gabor Kelemen (Collabora) 2024-12-10 11:44:52 UTC
Verified to work in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a366cd34a85a21210939482d229d6d2dd9c1087c
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded