tdf#160553: writerfilter: RTF import: fix problem with first table in section

Handles section properties between tables.
JUnit test included
Change-Id: I1db8b80749d18c0e73112e4fd1d13d6331aa7291

Change-Id: I8b00bfeb260af024f48ba8a3e6e6ac38e834b684
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170924
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>